codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__process_wait_process_exited_history.snap
---
source: tui/src/chatwidget/tests/process_wait.rs
expression: completed
---
• Waited 2m 18.24s · process exited · cargo build (process p1)
