codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__skill_read_uses_directory_name_before_skills_list_loads.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active_blob(&chat)
---
• Ran cat /tmp/skills/frontend-coding/SKILL.md
  └ (no output)
